В RSSCollector создан метод для чтения из XML файла readOfFile В RSSCollector создан метод для парсинга XML файлов collectRSSElementsXML